<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_current_train"
        android:icon="@drawable/train_filled"
        android:title="@string/nav_stringcurrent_train"/>
    <item
        android:id="@+id/nav_my_earning"
        android:icon="@drawable/rupee_filled_50"
        android:title="@string/nav_string_my_earning"/>
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/history_filled"
        android:title="@string/nav_string_history"/>
    <item
        android:id="@+id/nav_penalty"
        android:icon="@drawable/penalty_filled"
        android:title="@string/nav_string_penalty"/>
    <item
        android:checked="true"
        android:icon="@drawable/profile_filled"
        android:id="@+id/nav_my_profile"
        android:title="@string/nav_string_my_profile"/>
    <item
        android:icon="@drawable/support_filled"
        android:id="@+id/nav_support"
        android:title="@string/nav_string_support"/>
    <item
        android:icon="@drawable/logout_filled"
        android:id="@+id/nav_logout"
        android:title="@string/nav_string_logout"/>
    </group>
</menu>
