<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/bottom_border_textview"
    android:id="@+id/train_item"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/train_filled"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent">

            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/train_name"
                android:text="@string/dev_train_name"
                android:layout_alignParentRight="true"/>

            <TextView
                android:text="@string/dev_train_number"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/train_number"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:textColor="@color/pineApple"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/dev_train_station"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/dev_train_date"
            android:textColor="#000"
            android:gravity="end"/>

    </LinearLayout>

</LinearLayout>